creating final doc

--- a/fcc_plots.ipynb
+++ b/fcc_plots.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
      "text": [
       "Using license file /Users/zuck016/gurobi.lic\n",
       "Set parameter TokenServer to value leghorn.emsl.pnl.gov\n",
-      "Read LP format model from file /var/folders/z1/nhct2gps3y94tkbwqvvd7y_jw6p1l8/T/tmp447c6hno.lp\n",
+      "Read LP format model from file /var/folders/z1/nhct2gps3y94tkbwqvvd7y_jw6p1l8/T/tmpp28__hrt.lp\n",
       "Reading time = 0.01 seconds\n",
       ": 171 rows, 344 columns, 1240 nonzeros\n"
      ]
@@ -118,7 +118,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 4;\n",
+       "                var nbb_cell_id = 3;\n",
        "                var nbb_unformatted_code = \"with gzip.open(\\\"model_data.pz\\\", \\\"rb\\\") as f:\\n    data = pickle.load(f)\\n    ll = data[\\\"ll\\\"]\";\n",
        "                var nbb_formatted_code = \"with gzip.open(\\\"model_data.pz\\\", \\\"rb\\\") as f:\\n    data = pickle.load(f)\\n    ll = data[\\\"ll\\\"]\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 5;\n",
+       "                var nbb_cell_id = 4;\n",
        "                var nbb_unformatted_code = \"advi_file = \\\"output_A.niger_advi_20k.pgz\\\"\";\n",
        "                var nbb_formatted_code = \"advi_file = \\\"output_A.niger_advi_20k.pgz\\\"\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 6;\n",
+       "                var nbb_cell_id = 5;\n",
        "                var nbb_unformatted_code = \"with gzip.open(advi_file, \\\"rb\\\") as f:\\n    results = pickle.load(f)\\n    approx = results[\\\"approx\\\"]\\n    hist = results[\\\"hist\\\"]\\n    trace = results[\\\"trace\\\"]\\n\\nplt.semilogy(hist.hist, \\\".\\\", ms=1, alpha=0.1)\\n\\nplt.ylabel(\\\"Evidence Lower Bound\\\\n(ELBO)\\\")\\nplt.xlabel(\\\"Iteration\\\")\\n\\nplt.tight_layout()\\nplt.savefig(\\\"elbo.svg\\\")\\n\\n# with gzip.open('results_0.0025.pz', 'rb') as f:\\n#     results = pickle.load(f)\\n#     approx = results['approx']\\n#     hist5 = results['hist']\\n\\n# plt.semilogy(hist5.hist, '.', ms=1, alpha=.1)\\n\\n# plt.ylim([2E5, 4E5])\\n\\n# plt.ylim([2E5, 4E5])\";\n",
        "                var nbb_formatted_code = \"with gzip.open(advi_file, \\\"rb\\\") as f:\\n    results = pickle.load(f)\\n    approx = results[\\\"approx\\\"]\\n    hist = results[\\\"hist\\\"]\\n    trace = results[\\\"trace\\\"]\\n\\nplt.semilogy(hist.hist, \\\".\\\", ms=1, alpha=0.1)\\n\\nplt.ylabel(\\\"Evidence Lower Bound\\\\n(ELBO)\\\")\\nplt.xlabel(\\\"Iteration\\\")\\n\\nplt.tight_layout()\\nplt.savefig(\\\"elbo.svg\\\")\\n\\n# with gzip.open('results_0.0025.pz', 'rb') as f:\\n#     results = pickle.load(f)\\n#     approx = results['approx']\\n#     hist5 = results['hist']\\n\\n# plt.semilogy(hist5.hist, '.', ms=1, alpha=.1)\\n\\n# plt.ylim([2E5, 4E5])\\n\\n# plt.ylim([2E5, 4E5])\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -300,10 +300,6 @@
    "source": [
     "exchange_fluxes = [\n",
     "    \"EX_3hpp_e\",\n",
-    "    \"BAPAT\",\n",
-    "    \"HPDH\",\n",
-    "    \"ALD6\",\n",
-    "    \"3HPPt\",\n",
     "    \"BOUNDARY_GLCe\",\n",
     "]"
    ]
@@ -1845,14 +1841,14 @@
     }
    ],
    "source": [
-    "data[\"vn\"] = data[\"vn\"][\n",
+    "vn = data[\"vn\"][\n",
     "    exchange_fluxes\n",
     "]  # ['biomass', 'glucose', 'fructose', 'gluconate', '2-ketogluconate', 'muconate']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1862,7 +1858,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-38ca775e3988>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"vn\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0max_fluxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mmodel_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvn_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mmodel_hpd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhpd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvn_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-5368a5c55104>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"vn\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0miteritems\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0max\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0max_fluxes\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mmodel_mean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvn_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mmodel_hpd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhpd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvn_model\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     },
@@ -1883,9 +1879,9 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 7;\n",
-       "                var nbb_unformatted_code = \"fig = plt.figure(constrained_layout=True, figsize=(18, 5))\\ngs = fig.add_gridspec(2, 7)\\n\\nax_fluxes = [\\n    fig.add_subplot(gs[i, j], aspect=\\\"equal\\\") for i in range(2) for j in range(3)\\n]\\nvn_model = results[\\\"trace\\\"][\\\"vn_ss\\\"][:, :, data[\\\"v_inds\\\"]]\\n\\nfor i, (name, df) in enumerate(data[\\\"vn\\\"].iteritems()):\\n    ax = ax_fluxes[i]\\n    model_mean = vn_model[:, :, i].mean(0)\\n    model_hpd = pm.hpd(vn_model[:, :, i])\\n\\n    ax.errorbar(\\n        df,\\n        model_mean,\\n        yerr=np.abs(model_hpd - model_mean[:, np.newaxis]).T,\\n        marker=\\\".\\\",\\n        ls=\\\"\\\",\\n        label=name,\\n        elinewidth=1,\\n    )\\n\\n    ax.set_ylim(ax.get_xlim())\\n\\n    ax.set_title(name)\\n\\nax_xn = fig.add_subplot(gs[:, 3:5], aspect=\\\"equal\\\")\\nax_xn.plot(\\n    data[\\\"xn\\\"], results[\\\"trace\\\"][\\\"chi_ss\\\"][:, :, data[\\\"x_inds\\\"]].mean(0), \\\".\\\", ms=1\\n)\\nax_xn.set_xlim([-5, 5])\\nax_xn.set_ylim([-5, 5])\\nax_xn.set_title(\\\"Metabolomics (log transformed)\\\")\\nax_xn.set_ylabel(\\\"Regressed\\\")\\nax_xn.set_xlabel(\\\"Measured\\\")\\n\\nax_en = fig.add_subplot(gs[:, 5:], aspect=\\\"equal\\\")\\nax_en.plot(\\n    data[\\\"en\\\"],\\n    results[\\\"trace\\\"][\\\"log_en_t\\\"][:, :, data[\\\"e_inds\\\"]].mean(0),\\n    \\\".\\\",\\n    ms=1,\\n    rasterized=True,\\n)\\nax_en.set_xlim([-5, 5])\\nax_en.set_ylim([-5, 5])\\nax_en.set_title(\\\"Proteomics (log transformed)\\\")\\nax_en.set_ylabel(\\\"Regressed\\\")\\nax_en.set_xlabel(\\\"Measured\\\")\\n\\nplt.tight_layout()\\nsns.despine(offset=5)\\n\\nplt.savefig(\\n    \\\"regression_figures.svg\\\"\\n)  # \\\"20210908_abf_q4_milestone/putida_figs/regression_figures.svg\\\")\";\n",
-       "                var nbb_formatted_code = \"fig = plt.figure(constrained_layout=True, figsize=(18, 5))\\ngs = fig.add_gridspec(2, 7)\\n\\nax_fluxes = [\\n    fig.add_subplot(gs[i, j], aspect=\\\"equal\\\") for i in range(2) for j in range(3)\\n]\\nvn_model = results[\\\"trace\\\"][\\\"vn_ss\\\"][:, :, data[\\\"v_inds\\\"]]\\n\\nfor i, (name, df) in enumerate(data[\\\"vn\\\"].iteritems()):\\n    ax = ax_fluxes[i]\\n    model_mean = vn_model[:, :, i].mean(0)\\n    model_hpd = pm.hpd(vn_model[:, :, i])\\n\\n    ax.errorbar(\\n        df,\\n        model_mean,\\n        yerr=np.abs(model_hpd - model_mean[:, np.newaxis]).T,\\n        marker=\\\".\\\",\\n        ls=\\\"\\\",\\n        label=name,\\n        elinewidth=1,\\n    )\\n\\n    ax.set_ylim(ax.get_xlim())\\n\\n    ax.set_title(name)\\n\\nax_xn = fig.add_subplot(gs[:, 3:5], aspect=\\\"equal\\\")\\nax_xn.plot(\\n    data[\\\"xn\\\"], results[\\\"trace\\\"][\\\"chi_ss\\\"][:, :, data[\\\"x_inds\\\"]].mean(0), \\\".\\\", ms=1\\n)\\nax_xn.set_xlim([-5, 5])\\nax_xn.set_ylim([-5, 5])\\nax_xn.set_title(\\\"Metabolomics (log transformed)\\\")\\nax_xn.set_ylabel(\\\"Regressed\\\")\\nax_xn.set_xlabel(\\\"Measured\\\")\\n\\nax_en = fig.add_subplot(gs[:, 5:], aspect=\\\"equal\\\")\\nax_en.plot(\\n    data[\\\"en\\\"],\\n    results[\\\"trace\\\"][\\\"log_en_t\\\"][:, :, data[\\\"e_inds\\\"]].mean(0),\\n    \\\".\\\",\\n    ms=1,\\n    rasterized=True,\\n)\\nax_en.set_xlim([-5, 5])\\nax_en.set_ylim([-5, 5])\\nax_en.set_title(\\\"Proteomics (log transformed)\\\")\\nax_en.set_ylabel(\\\"Regressed\\\")\\nax_en.set_xlabel(\\\"Measured\\\")\\n\\nplt.tight_layout()\\nsns.despine(offset=5)\\n\\nplt.savefig(\\n    \\\"regression_figures.svg\\\"\\n)  # \\\"20210908_abf_q4_milestone/putida_figs/regression_figures.svg\\\")\";\n",
+       "                var nbb_cell_id = 6;\n",
+       "                var nbb_unformatted_code = \"fig = plt.figure(constrained_layout=True, figsize=(18, 5))\\ngs = fig.add_gridspec(2, 7)\\n\\nax_fluxes = [\\n    fig.add_subplot(gs[i, j], aspect=\\\"equal\\\") for i in range(2) for j in range(3)\\n]\\nvn_model = trace[\\\"vn_ss\\\"][:, :, data[\\\"v_inds\\\"]]\\n\\nfor i, (name, df) in enumerate(data[\\\"vn\\\"].iteritems()):\\n    ax = ax_fluxes[i]\\n    model_mean = vn_model[:, :, i].mean(0)\\n    model_hpd = pm.hpd(vn_model[:, :, i])\\n\\n    ax.errorbar(\\n        df,\\n        model_mean,\\n        yerr=np.abs(model_hpd - model_mean[:, np.newaxis]).T,\\n        marker=\\\".\\\",\\n        ls=\\\"\\\",\\n        label=name,\\n        elinewidth=1,\\n    )\\n\\n    ax.set_ylim(ax.get_xlim())\\n\\n    ax.set_title(name)\\n\\nax_xn = fig.add_subplot(gs[:, 3:5], aspect=\\\"equal\\\")\\nax_xn.plot(\\n    data[\\\"xn\\\"], results[\\\"trace\\\"][\\\"chi_ss\\\"][:, :, data[\\\"x_inds\\\"]].mean(0), \\\".\\\", ms=1\\n)\\nax_xn.set_xlim([-5, 5])\\nax_xn.set_ylim([-5, 5])\\nax_xn.set_title(\\\"Metabolomics (log transformed)\\\")\\nax_xn.set_ylabel(\\\"Regressed\\\")\\nax_xn.set_xlabel(\\\"Measured\\\")\\n\\nax_en = fig.add_subplot(gs[:, 5:], aspect=\\\"equal\\\")\\nax_en.plot(\\n    data[\\\"en\\\"],\\n    results[\\\"trace\\\"][\\\"log_en_t\\\"][:, :, data[\\\"e_inds\\\"]].mean(0),\\n    \\\".\\\",\\n    ms=1,\\n    rasterized=True,\\n)\\nax_en.set_xlim([-5, 5])\\nax_en.set_ylim([-5, 5])\\nax_en.set_title(\\\"Proteomics (log transformed)\\\")\\nax_en.set_ylabel(\\\"Regressed\\\")\\nax_en.set_xlabel(\\\"Measured\\\")\\n\\nplt.tight_layout()\\nsns.despine(offset=5)\\n\\nplt.savefig(\\n    \\\"regression_figures.svg\\\"\\n)  # \\\"20210908_abf_q4_milestone/putida_figs/regression_figures.svg\\\")\";\n",
+       "                var nbb_formatted_code = \"fig = plt.figure(constrained_layout=True, figsize=(18, 5))\\ngs = fig.add_gridspec(2, 7)\\n\\nax_fluxes = [\\n    fig.add_subplot(gs[i, j], aspect=\\\"equal\\\") for i in range(2) for j in range(3)\\n]\\nvn_model = trace[\\\"vn_ss\\\"][:, :, data[\\\"v_inds\\\"]]\\n\\nfor i, (name, df) in enumerate(data[\\\"vn\\\"].iteritems()):\\n    ax = ax_fluxes[i]\\n    model_mean = vn_model[:, :, i].mean(0)\\n    model_hpd = pm.hpd(vn_model[:, :, i])\\n\\n    ax.errorbar(\\n        df,\\n        model_mean,\\n        yerr=np.abs(model_hpd - model_mean[:, np.newaxis]).T,\\n        marker=\\\".\\\",\\n        ls=\\\"\\\",\\n        label=name,\\n        elinewidth=1,\\n    )\\n\\n    ax.set_ylim(ax.get_xlim())\\n\\n    ax.set_title(name)\\n\\nax_xn = fig.add_subplot(gs[:, 3:5], aspect=\\\"equal\\\")\\nax_xn.plot(\\n    data[\\\"xn\\\"], results[\\\"trace\\\"][\\\"chi_ss\\\"][:, :, data[\\\"x_inds\\\"]].mean(0), \\\".\\\", ms=1\\n)\\nax_xn.set_xlim([-5, 5])\\nax_xn.set_ylim([-5, 5])\\nax_xn.set_title(\\\"Metabolomics (log transformed)\\\")\\nax_xn.set_ylabel(\\\"Regressed\\\")\\nax_xn.set_xlabel(\\\"Measured\\\")\\n\\nax_en = fig.add_subplot(gs[:, 5:], aspect=\\\"equal\\\")\\nax_en.plot(\\n    data[\\\"en\\\"],\\n    results[\\\"trace\\\"][\\\"log_en_t\\\"][:, :, data[\\\"e_inds\\\"]].mean(0),\\n    \\\".\\\",\\n    ms=1,\\n    rasterized=True,\\n)\\nax_en.set_xlim([-5, 5])\\nax_en.set_ylim([-5, 5])\\nax_en.set_title(\\\"Proteomics (log transformed)\\\")\\nax_en.set_ylabel(\\\"Regressed\\\")\\nax_en.set_xlabel(\\\"Measured\\\")\\n\\nplt.tight_layout()\\nsns.despine(offset=5)\\n\\nplt.savefig(\\n    \\\"regression_figures.svg\\\"\\n)  # \\\"20210908_abf_q4_milestone/putida_figs/regression_figures.svg\\\")\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
        "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
        "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
@@ -1913,7 +1909,7 @@
     "ax_fluxes = [\n",
     "    fig.add_subplot(gs[i, j], aspect=\"equal\") for i in range(2) for j in range(3)\n",
     "]\n",
-    "vn_model = results[\"trace\"][\"vn_ss\"][:, :, data[\"v_inds\"]]\n",
+    "vn_model = trace[\"vn_ss\"][:, :, data[\"v_inds\"]]\n",
     "\n",
     "for i, (name, df) in enumerate(data[\"vn\"].iteritems()):\n",
     "    ax = ax_fluxes[i]\n",
@@ -6700,13 +6696,7 @@
       " 30%|███       | 152/500 [00:18<00:41,  8.43it/s]\u001b[A\n",
       " 31%|███       | 153/500 [00:18<00:41,  8.29it/s]\u001b[A\n",
       " 31%|███       | 154/500 [00:18<00:41,  8.32it/s]\u001b[A\n",
-      " 31%|███       | 155/500 [00:18<00:41,  8.22it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 31%|███       | 155/500 [00:18<00:41,  8.22it/s]\u001b[A\n",
       " 31%|███       | 156/500 [00:18<00:41,  8.21it/s]\u001b[A\n",
       " 31%|███▏      | 157/500 [00:18<00:42,  8.12it/s]\u001b[A\n",
       " 32%|███▏      | 158/500 [00:19<00:42,  8.09it/s]\u001b[A\n",
@@ -7020,13 +7010,7 @@
       " 92%|█████████▏| 460/500 [00:58<00:05,  7.44it/s]\u001b[A\n",
       " 92%|█████████▏| 461/500 [00:58<00:05,  7.38it/s]\u001b[A\n",
       " 92%|█████████▏| 462/500 [00:58<00:05,  7.48it/s]\u001b[A\n",
-      " 93%|█████████▎| 463/500 [00:58<00:04,  7.47it/s]\u001b[A\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      " 93%|█████████▎| 463/500 [00:58<00:04,  7.47it/s]\u001b[A\n",
       " 93%|█████████▎| 464/500 [00:58<00:04,  7.50it/s]\u001b[A\n",
       " 93%|█████████▎| 465/500 [00:59<00:04,  7.47it/s]\u001b[A\n",
       " 93%|█████████▎| 466/500 [00:59<00:04,  7.59it/s]\u001b[A\n",
