Updated for ADVI 50k iterations with targeted enzymes

--- a/notebooks/A.niger_MultiOmics.ipynb
+++ b/notebooks/A.niger_MultiOmics.ipynb
@@ -4680,6 +4680,220 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Line Name</th>\n",
+       "      <th>Formal Type</th>\n",
+       "      <th>Value</th>\n",
+       "      <th>exp</th>\n",
+       "      <th>Protocol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SF ABF93_1-R1</td>\n",
+       "      <td>growth_rate</td>\n",
+       "      <td>0.044352</td>\n",
+       "      <td>SF ABF93_1-R1</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SF ABF93_1-R2</td>\n",
+       "      <td>growth_rate</td>\n",
+       "      <td>0.042139</td>\n",
+       "      <td>SF ABF93_1-R1</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SF ABF93_1-R3</td>\n",
+       "      <td>growth_rate</td>\n",
+       "      <td>0.043531</td>\n",
+       "      <td>SF ABF93_1-R1</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SF ABF93_2-R1</td>\n",
+       "      <td>growth_rate</td>\n",
+       "      <td>0.047123</td>\n",
+       "      <td>SF ABF93_1-R2</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>SF ABF93_2-R2</td>\n",
+       "      <td>growth_rate</td>\n",
+       "      <td>0.039356</td>\n",
+       "      <td>SF ABF93_1-R2</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>SF ABF93_15-R2</td>\n",
+       "      <td>3hp_secretion_rates (mmol/gDCW * hr)</td>\n",
+       "      <td>9.741029</td>\n",
+       "      <td>SF ABF93_17-R2</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>SF ABF93_15-R3</td>\n",
+       "      <td>3hp_secretion_rates (mmol/gDCW * hr)</td>\n",
+       "      <td>10.610720</td>\n",
+       "      <td>SF ABF93_17-R2</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>SF ABF93_17-R1</td>\n",
+       "      <td>3hp_secretion_rates (mmol/gDCW * hr)</td>\n",
+       "      <td>4.997250</td>\n",
+       "      <td>SF ABF93_17-R3</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>151</th>\n",
+       "      <td>SF ABF93_17-R2</td>\n",
+       "      <td>3hp_secretion_rates (mmol/gDCW * hr)</td>\n",
+       "      <td>4.958145</td>\n",
+       "      <td>SF ABF93_17-R3</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>152</th>\n",
+       "      <td>SF ABF93_17-R3</td>\n",
+       "      <td>3hp_secretion_rates (mmol/gDCW * hr)</td>\n",
+       "      <td>4.579871</td>\n",
+       "      <td>SF ABF93_17-R3</td>\n",
+       "      <td>Extracellular Fluxes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>153 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Line Name                           Formal Type      Value  \\\n",
+       "0     SF ABF93_1-R1                           growth_rate   0.044352   \n",
+       "1     SF ABF93_1-R2                           growth_rate   0.042139   \n",
+       "2     SF ABF93_1-R3                           growth_rate   0.043531   \n",
+       "3     SF ABF93_2-R1                           growth_rate   0.047123   \n",
+       "4     SF ABF93_2-R2                           growth_rate   0.039356   \n",
+       "..              ...                                   ...        ...   \n",
+       "148  SF ABF93_15-R2  3hp_secretion_rates (mmol/gDCW * hr)   9.741029   \n",
+       "149  SF ABF93_15-R3  3hp_secretion_rates (mmol/gDCW * hr)  10.610720   \n",
+       "150  SF ABF93_17-R1  3hp_secretion_rates (mmol/gDCW * hr)   4.997250   \n",
+       "151  SF ABF93_17-R2  3hp_secretion_rates (mmol/gDCW * hr)   4.958145   \n",
+       "152  SF ABF93_17-R3  3hp_secretion_rates (mmol/gDCW * hr)   4.579871   \n",
+       "\n",
+       "                exp              Protocol  \n",
+       "0     SF ABF93_1-R1  Extracellular Fluxes  \n",
+       "1     SF ABF93_1-R1  Extracellular Fluxes  \n",
+       "2     SF ABF93_1-R1  Extracellular Fluxes  \n",
+       "3     SF ABF93_1-R2  Extracellular Fluxes  \n",
+       "4     SF ABF93_1-R2  Extracellular Fluxes  \n",
+       "..              ...                   ...  \n",
+       "148  SF ABF93_17-R2  Extracellular Fluxes  \n",
+       "149  SF ABF93_17-R2  Extracellular Fluxes  \n",
+       "150  SF ABF93_17-R3  Extracellular Fluxes  \n",
+       "151  SF ABF93_17-R3  Extracellular Fluxes  \n",
+       "152  SF ABF93_17-R3  Extracellular Fluxes  \n",
+       "\n",
+       "[153 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "\n",
+       "            setTimeout(function() {\n",
+       "                var nbb_cell_id = 21;\n",
+       "                var nbb_unformatted_code = \"boundary_data = pd.read_csv(\\\"Line_rates.csv\\\")\\nboundary_data.drop(\\n    columns=[\\n        \\\"Omics Sample ID\\\",\\n        \\\"Strain (ICE)\\\",\\n        \\\"Genotype\\\",\\n    ]\\n)\\n\\nboundary_data = boundary_data.melt(\\n    id_vars=[\\\"Line Name\\\"],\\n    value_vars=[\\n        \\\"growth_rate\\\",\\n        \\\"glucose_uptake_rates (mmol/gDCW * hr)\\\",\\n        \\\"3hp_secretion_rates (mmol/gDCW * hr)\\\",\\n    ],\\n    var_name=\\\"Formal Type\\\",\\n    value_name=\\\"Value\\\",\\n)\\nboundary_data[\\\"exp\\\"] = df[\\\"Line Name\\\"].str.split(\\\"-\\\").apply(lambda x: \\\"-\\\".join(x[:2]))\\nboundary_data[\\\"Protocol\\\"] = \\\"Extracellular Fluxes\\\"\\nboundary_data\";\n",
+       "                var nbb_formatted_code = \"boundary_data = pd.read_csv(\\\"Line_rates.csv\\\")\\nboundary_data.drop(\\n    columns=[\\n        \\\"Omics Sample ID\\\",\\n        \\\"Strain (ICE)\\\",\\n        \\\"Genotype\\\",\\n    ]\\n)\\n\\nboundary_data = boundary_data.melt(\\n    id_vars=[\\\"Line Name\\\"],\\n    value_vars=[\\n        \\\"growth_rate\\\",\\n        \\\"glucose_uptake_rates (mmol/gDCW * hr)\\\",\\n        \\\"3hp_secretion_rates (mmol/gDCW * hr)\\\",\\n    ],\\n    var_name=\\\"Formal Type\\\",\\n    value_name=\\\"Value\\\",\\n)\\nboundary_data[\\\"exp\\\"] = df[\\\"Line Name\\\"].str.split(\\\"-\\\").apply(lambda x: \\\"-\\\".join(x[:2]))\\nboundary_data[\\\"Protocol\\\"] = \\\"Extracellular Fluxes\\\"\\nboundary_data\";\n",
+       "                var nbb_cells = Jupyter.notebook.get_cells();\n",
+       "                for (var i = 0; i < nbb_cells.length; ++i) {\n",
+       "                    if (nbb_cells[i].input_prompt_number == nbb_cell_id) {\n",
+       "                        if (nbb_cells[i].get_text() == nbb_unformatted_code) {\n",
+       "                             nbb_cells[i].set_text(nbb_formatted_code);\n",
+       "                        }\n",
+       "                        break;\n",
+       "                    }\n",
+       "                }\n",
+       "            }, 500);\n",
+       "            "
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "eflux_data = pd.read_csv(\"../data/Eflux2_flux_rates.flipped.csv\")\n",
+    "eflux_data.drop(\n",
+    "    columns=[\n",
+    "        \"Omics Sample ID\",\n",
+    "        \"Strain (ICE)\",\n",
+    "        \"Genotype\",\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "eflux_data = eflux_data.melt(\n",
+    "    id_vars=[\"Line Name\"],\n",
+    "    value_vars=[\n",
+    "        \"growth_rate\",\n",
+    "        \"glucose_uptake_rates (mmol/gDCW * hr)\",\n",
+    "        \"3hp_secretion_rates (mmol/gDCW * hr)\",\n",
+    "    ],\n",
+    "    var_name=\"Formal Type\",\n",
+    "    value_name=\"Value\",\n",
+    ")\n",
+    "boundary_data[\"exp\"] = df[\"Line Name\"].str.split(\"-\").apply(lambda x: \"-\".join(x[:2]))\n",
+    "boundary_data[\"Protocol\"] = \"Extracellular Fluxes\"\n",
+    "boundary_data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
