Added targets for 3hp

--- a/notebooks/A.niger_MultiOmics.ipynb
+++ b/notebooks/A.niger_MultiOmics.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 5;\n",
+       "                var nbb_cell_id = 1;\n",
        "                var nbb_unformatted_code = \"%load_ext nb_black\\nfrom edd_utils import login, export_study\\nimport pandas as pd\\nimport cobra, gzip, re\\nimport matplotlib.pyplot as plt\\nimport seaborn as sns\\n%matplotlib inline\\n\\nimport gzip\\nfrom tqdm import tqdm\\nimport numpy as np\";\n",
        "                var nbb_formatted_code = \"%load_ext nb_black\\nfrom edd_utils import login, export_study\\nimport pandas as pd\\nimport cobra, gzip, re\\nimport matplotlib.pyplot as plt\\nimport seaborn as sns\\n\\n%matplotlib inline\\n\\nimport gzip\\nfrom tqdm import tqdm\\nimport numpy as np\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -81,15 +81,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using license file /Users/zuck016/gurobi.lic\n",
-      "Set parameter TokenServer to value leghorn.emsl.pnl.gov\n"
+      "Restricted license - for non-production use only - expires 2022-01-13\n"
      ]
     },
     {
@@ -98,7 +97,7 @@
        "171"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -107,7 +106,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 18;\n",
+       "                var nbb_cell_id = 2;\n",
        "                var nbb_unformatted_code = \"model = cobra.io.load_json_model(\\n    \\\"../models/iJB1325_HP.nonnative_genes.pubchem.flipped.nonzero.reduced.json\\\"\\n)\\nlen(model.metabolites)\";\n",
        "                var nbb_formatted_code = \"model = cobra.io.load_json_model(\\n    \\\"../models/iJB1325_HP.nonnative_genes.pubchem.flipped.nonzero.reduced.json\\\"\\n)\\nlen(model.metabolites)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -2502,7 +2501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2510,7 +2509,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 2;\n",
+       "                var nbb_cell_id = 3;\n",
        "                var nbb_unformatted_code = \"study_slug = \\\"aniger_3hp_omics_shakeflask-93_pnnl\\\"\\nedd_server = \\\"edd.agilebiofoundry.org\\\"\\nuser = \\\"zucker\\\"\";\n",
        "                var nbb_formatted_code = \"study_slug = \\\"aniger_3hp_omics_shakeflask-93_pnnl\\\"\\nedd_server = \\\"edd.agilebiofoundry.org\\\"\\nuser = \\\"zucker\\\"\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
@@ -2541,14 +2540,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Password for zucker: ········\n"
+      "Password for zucker:  ················\n"
      ]
     },
     {
@@ -2556,7 +2555,7 @@
       "application/javascript": [
        "\n",
        "            setTimeout(function() {\n",
-       "                var nbb_cell_id = 3;\n",
+       "                var nbb_cell_id = 6;\n",
        "                var nbb_unformatted_code = \"session = login(edd_server=edd_server, user=user)\";\n",
        "                var nbb_formatted_code = \"session = login(edd_server=edd_server, user=user)\";\n",
        "                var nbb_cells = Jupyter.notebook.get_cells();\n",
